app.css
html, body {
    padding: 0;
    margin: 0;
}

.hero-image {
    background-image: url("images/hero-image-mobile.JPG");
    background-color: #cccccc;
    height: 800px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
  }

#hero-text {
    font-size: 40px;
    text-align: center;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-shadow: 1px 1px 0px #000;
    padding: 2%;
    border: 3px solid white;
  }

nav {
    color: white;
    position: fixed;
    width: 100%;
  }

.hidden {
   display: none;
  }

.test {
   display: flex;
   background-color: black;
}

.logo {
    flex: 1;
}

.bar-container { 
    cursor: pointer;
    float: right;
    width: 40px;
}

.bar1, .bar2, .bar3 {
    width: 30px;
    height: 4px;
    background-color: white;
    margin: 6px 0;
    transition: 0.4s;
}

.change .bar1 {
    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
    transform: rotate(-45deg) translate(-9px, 6px);
}

.change .bar2 {opacity: 0;}

.change .bar3 {
    -webkit-transform: rotate(45deg) translate(-8px, -6px);
    transform: rotate(45deg) translate(-8px, -6px);
}

#menu-items {
    background-color: purple;
    text-align: center;
    width: 300px;
    margin: 10% auto;
}

section {
    text-align: center;
}

#about {
    background-color: #FAFAFA;
    padding: 6px 0;
    margin-bottom: 20px;
}

#about-text {
    max-width: 90%;
    margin: 0 auto;
}

#gallery {
    background-image: url("images/hands.jpg");
    background-color: #cccccc;
    height: 250px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}


#enter-gallery {
    font-size: 25px;
    text-align: center;
    position: relative;
    max-width: 200px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-shadow: 1px 1px 0px #000;
    padding: 2%;
    border: 3px solid white;
}

#contact {
    background-color: #FAFAFA;
    padding: 10px 0;
    margin-bottom: 20px;
}

.submit {
    font-size: 20px;
    margin-right: 15px;
    padding: 4px;
    background-color: #28A875;
    color: white;
}

.reset {
    font-size: 20px;
    padding: 4px;
    background-color: #DC3545;
    color: white;
}

footer {
    background-color: black;
    color: white;
    padding: 5px 0;
}

#copyright {
    text-align: center;
    margin-bottom: 20px;
}

.footer-links {
    text-align: center;
}

.footer-links a {
    text-decoration: none;
    color: white;
    margin-right: 10px;
}

